@@ -72,7 +72,7 @@ class ProductOptionRepositoryImplTest {
 
         // then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).id()).isEqualTo(1L);
+        assertThat(result.getFirst().id()).isEqualTo(1L);
     }
 
     @Test
